--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/express-session": "^1.18.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "google-auth-library": "^9.15.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
