--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "web-push": "^3.6.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
