--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.2.1",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.7",
@@ -23,6 +23,7 @@
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.2.1",
     "web-push": "^3.6.7",
     "zod": "^3.24.1"
   },
