--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "prisma": "^6.2.1",
+    "socket.io": "^4.8.1",
     "web-push": "^3.6.7",
     "zod": "^3.24.1"
   },
