--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/morgan": "^1.9.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
@@ -23,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "open-graph-scraper": "^6.9.0",
     "prisma": "^6.2.1",
     "socket.io": "^4.8.1",
@@ -35,6 +39,8 @@
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.5",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^5.7.2"
   }
 }
