--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@types/morgan": "^1.9.9",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -21,14 +22,19 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "open-graph-scraper": "^6.9.0",
+    "pdf-lib": "^1.17.1",
     "prisma": "^6.2.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "web-push": "^3.6.7",
     "zod": "^3.24.1"
@@ -37,7 +43,9 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
