--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@types/morgan": "^1.9.9",
+    "canvas": "^3.1.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
+    "libreoffice-convert": "^1.6.0",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -33,6 +35,7 @@
     "nodemailer": "^6.10.0",
     "open-graph-scraper": "^6.9.0",
     "pdf-lib": "^1.17.1",
+    "pdf2pic": "^3.1.3",
     "prisma": "^6.2.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
