--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@types/morgan": "^1.9.9",
+    "@types/web-push": "^3.6.4",
     "canvas": "^3.1.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
