--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "@prisma/client": "^6.4.1",
+    "@stream-io/node-sdk": "^0.4.18",
     "@types/morgan": "^1.9.9",
     "@types/web-push": "^3.6.4",
     "canvas": "^3.1.0",
