--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@liveblocks/node": "^2.20.0",
     "@prisma/client": "^6.4.1",
     "@types/morgan": "^1.9.9",
     "@types/web-push": "^3.6.4",
